fix: stack自定义头像&&gap撑大空元素问题

--- a/app/components/markdown-doc/styles.less
+++ b/app/components/markdown-doc/styles.less
@@ -30,7 +30,7 @@
     .md-content {
       height: 100%;
       overflow-y: auto;
-      padding: 54px 20px 350px 32px;
+      padding: 24px 20px 35px 32px;
       flex: 1;
     }
   }
